--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-parallax": "^2.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
+    "react-skrollr": "^1.0.4",
     "web3": "^1.0.0-beta.37"
   },
   "scripts": {
