--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
     "react-skrollr": "^1.0.4",
+    "react-typewriter-hook": "^1.0.1",
+    "react-typist": "^2.0.5",
     "web3": "^1.0.0-beta.37"
   },
   "scripts": {
